[package]
name = "kvs"
version = "0.1.0"
authors = ["mateiidavid <matei.david.35@gmail.com>"]
edition = "2018"
description = "\nDistributed in-memory key value data store written in Rust!\nPart of my #100DaysOfCode challenge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[[bin]]
name = "kvs"
test = false

[lib]
test = false